# sso

./: .env  Cargo.toml  user.json
sql/: create_url.sql  create_users.sql
src/: config.rs  error.rs  main.rs  utils.rs
src/db/: mod.rs  model.rs
src/handlers/: auth.rs  mod.rs  shorturls.rs  user.rs
