[package]
name = "sso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.0"
actix-web = "4"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "postgres","chrono"] }
serde = { version = "1.0" }
color-eyre = "0.5"
config = "0.13.2"
dotenv = "0.15.0"
rust-crypto = "^0.2"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
